# WireboundDev

./: CMakeLists.txt  README.md
assets/: PoissonPoints.h
assets/text/: BitmapsInfo.h  PhrasesHashText.h  PhrasesTexCoords.h  README.md  en.txt
shaders/: Dithering.comp  Grass.frag  Grass.tesc  Grass.tese  Grass.vert  Model.frag  Model.vert  PoissonPoints.comp  Skybox.vert  StaticSprite.frag  Terrain.frag  Terrain.tesc  Terrain.tese  Terrain.vert
src/: Aabb.h  Camera.h  Colors.h  Common.h  Cubemap.h  Details.h  GlWrappers.h  Grass.cpp  Grass.h  Renderer.cpp  Renderer.h  SetupWindow.h  Shader.h  Sprite.h  Terrain.h  Texture.h  main.cpp
src/models3d/: AnimatableModel.cpp  AnimatableModel.h  ModelData.h  ModelLoader.cpp  ModelLoader.h  NonAnimatableModel.cpp  NonAnimatableModel.h  README.md
src/text/: Text.h  TextRenderer.cpp  TextRenderer.h
